--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -326,6 +326,7 @@ CONFIG_PREEMPT=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PROC_CHILDREN=y
 CONFIG_PROC_UID=y
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_PROFILING=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
