CHROMIUM: arm64: qcom: sc7180: Configure swapped BT UART pins for trogdor rev0
On trogdor rev0 the Bluetooth the UART TX/RX and RTS/CTS pins are
swapped. Account for this by changing the pinconf and tell the UART
driver to swap the pins.

BUG=b:149512358
TEST=Bluetooth on trogdor proto0 works

Change-Id: I63fc4e0d19b51b213ac4e799bd0e4f5e4d46fc86
Signed-off-by: Matthias Kaehlcke <mka@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2052972
Tested-by: Stephen Boyd <swboyd@chromium.org>
Commit-Queue: Stephen Boyd <swboyd@chromium.org>
Reviewed-by: Satya Priya Kakitapalli <c_skakit@qualcomm.corp-partner.google.com>
Reviewed-by: Stephen Boyd <swboyd@chromium.org>

--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-r0.dts
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-r0.dts
@@ -160,6 +160,22 @@ ap_ts_pen_1v8: &i2c4 {
 			  "";
 };
 
+&qup_uart3_default {
+	/* account for swapped Bluetooth TX/RX and RTS/CTS lines */
+
+	pinconf-cts {
+		pins = "gpio39";
+	};
+
+	pinconf-rts-tx {
+		pins = "gpio38", "gpio41";
+	};
+
+	pinconf-rx {
+		pins = "gpio40";
+	};
+};
+
 &tlmm {
 	gpio-line-names = "ESIM_MISO",
 			  "ESIM_MOSI",
@@ -284,4 +300,9 @@ ap_ts_pen_1v8: &i2c4 {
 			  "AP_TS_PEN_I2C_SCL",
 			  "DP_HOT_PLUG_DET",
 			  "EC_IN_RW_ODL";
+};
+
+&uart3 {
+	cts-rts-swap;
+	rx-tx-swap;
 };
