CHROMIUM: arm64: dts: qcom: sc7180: Enable proximity sensor on lazor
There is a proximity sensor on lazor. Add it to the DTS so that the
driver probes.

BUG=b:162279829
TEST=See /dev/proximity-wifi device node created

Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Change-Id: Ibed6f7e3dfabcf205d1e18bd2a058c33173eb57d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2316119
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-lte-sku.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-lte-sku.dtsi
@@ -5,6 +5,10 @@
  * Copyright 2020 Google LLC.
  */
 
+&ap_sar_sensor {
+	label = "proximity-wifi-lte";
+};
+
 &remoteproc_mpss {
 	firmware-name = "sc7180-mss/google-trogdor/mba.mbn",
 			"sc7180-mss/google-trogdor/modem.mdt";
