--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-pompom.dts
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-pompom.dts
@@ -35,9 +35,5 @@
 };
 
 &panel {
-	/*
-	 * Actual panel is KD116N21-30NV but the timings for auo,b116xa01
-	 * work fine.
-	 */
-	compatible = "kingdisplay,kd116n21-30nv", "auo,b116xa01";
+	compatible = "kingdisplay,kd116n21-30nv-a010";
 };
