--- a/drivers/gpu/drm/msm/Kconfig
+++ b/drivers/gpu/drm/msm/Kconfig
@@ -59,11 +59,11 @@ config DRM_MSM_HDMI_HDCP
 	  Choose this option to enable HDCP state machine
 
 config DRM_MSM_DP
-	bool "Enable DP support in MSM DRM driver"
+	bool "Enable DisplayPort support in MSM DRM driver"
 	depends on DRM_MSM
 	default y
 	help
-	  Compile in support for DP driver in msm drm driver. DP external
+	  Compile in support for DP driver in MSM DRM driver. DP external
 	  display support is enabled through this config option. It can
 	  be primary or secondary display on device.
 
