CHROMIUM: arm64: dts: qcom: sc7180: Update modem/wifi FW directory
Move modem/wifi firmware directory to be more like upstream

BUG=b:163121806
TEST=Try modem and nomodem builds; try suspend/resume

Cq-Depend: chrome-internal:3215666
Signed-off-by: Sujit Kautkar <sujitka@chromium.org>
Change-Id: I9bc00eb233bd984fe348ff9528ad9005bd411c68
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2354851
Reviewed-by: Douglas Anderson <dianders@chromium.org>
Reviewed-by: Evan Green <evgreen@chromium.org>

--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-lte-sku.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-lte-sku.dtsi
@@ -10,6 +10,6 @@
 };
 
 &remoteproc_mpss {
-	firmware-name = "sc7180-mss/google-trogdor/mba.mbn",
-			"sc7180-mss/google-trogdor/modem.mdt";
+	firmware-name = "qcom/sc7180-trogdor/modem/mba.mbn",
+			"qcom/sc7180-trogdor/modem/qdsp6sw.mbn";
 };
