--- a/arch/arm64/configs/arm64_arcvm_defconfig
+++ b/arch/arm64/configs/arm64_arcvm_defconfig
@@ -482,6 +482,8 @@ CONFIG_9P_FS_POSIX_ACL=y
 CONFIG_9P_FS_SECURITY=y
 CONFIG_NLS_DEFAULT="utf8"
 CONFIG_NLS_UTF8=y
+CONFIG_NLS_CODEPAGE_437=y
+CONFIG_NLS_ISO8859_1=y
 CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
