CHROMIUM: config: amd: enable RAPL
Intel Running Average Power Limit (RAPL) is now available on AMD;
enabling it.

BUG=b:152560223
TEST=checked related sysfs entries on zork

Signed-off-by: Victor Ding <victording@google.com>
Change-Id: I1bf32ca1678c2fd12133206c681d66f061f2f6bd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2366538
Reviewed-by: Raul E Rangel <rrangel@chromium.org>
Tested-by: Victor Ding <victording@chromium.org>
Auto-Submit: Victor Ding <victording@chromium.org>
Commit-Queue: Victor Ding <victording@chromium.org>

--- a/chromeos/config/x86_64/chromeos-amd-stoneyridge.flavour.config
+++ b/chromeos/config/x86_64/chromeos-amd-stoneyridge.flavour.config
@@ -37,6 +37,7 @@ CONFIG_GPIO_LYNXPOINT=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_HP_WMI=m
 # CONFIG_HW_RANDOM_INTEL is not set
+CONFIG_INTEL_RAPL=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_MAILBOX=y
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
