CHROMIUM: config: ARCVM: Update CONFIG_STATIC_USERMODEHELPER_PATH
A usermode helper is required to call a process from
/proc/sys/kernel/core_pattern under Android CTS
android.security.cts.KernelConfigTest#testConfigDisableUsermodehelper.

BUG=b:165210685
TEST=tast run $DUT arc.NativeCrash.{mock,real}_consent

Signed-off-by: Kimiyuki Onaka <kimiyuki@google.com>
Change-Id: Iadb11c9b2ddc95500bb9bf80ac1da36270c81d09
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2368853
Reviewed-by: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>

--- a/arch/x86/configs/x86_64_arcvm_defconfig
+++ b/arch/x86/configs/x86_64_arcvm_defconfig
@@ -553,7 +553,7 @@ CONFIG_SECURITY_PATH=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_STATIC_USERMODEHELPER_PATH=""
+CONFIG_STATIC_USERMODEHELPER_PATH="/system/bin/arc-usermode-helper"
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_YAMA=y
