--- a/arch/arm64/configs/arm64_arcvm_defconfig
+++ b/arch/arm64/configs/arm64_arcvm_defconfig
@@ -490,7 +490,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_PATH=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_STATIC_USERMODEHELPER_PATH=""
+CONFIG_STATIC_USERMODEHELPER_PATH="/system/bin/arc-usermode-helper"
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_YAMA=y
