CHROMIUM: config: Re-normalize configs
Generated using:

./chromeos/scripts/kernelconfig olddefconfig

BUG=None
TEST=emerge-$BOARD sys-kernel/chromeos-kernel-5_4

Signed-off-by: Prashant Malani <pmalani@chromium.org>
Change-Id: Ic3d2107d00640b5045f2cb024a460880723e4eca
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2381316
Reviewed-by: Guenter Roeck <groeck@chromium.org>
Reviewed-by: Alex Levin <levinale@google.com>
Reviewed-by: Raul E Rangel <rrangel@chromium.org>
Reviewed-by: Victor Ding <victording@chromium.org>

--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -78,6 +78,7 @@ CONFIG_IIO_CROS_EC_SENSORS_LID_ANGLE=m
 CONFIG_IIO_CROS_EC_SENSORS_RING=m
 CONFIG_IIO_CROS_EC_SENSORS_SYNC=m
 CONFIG_INT340X_THERMAL=y
+CONFIG_INTEL_RAPL=y
 CONFIG_INTEL_VBTN=m
 CONFIG_IO_DELAY_0XED=y
 CONFIG_ITCO_VENDOR_SUPPORT=y
