Add Serio Raw access for i8042 devices.
BUG=b:162454660
TEST=Test Elan Trackpoint raw access with Morphius

Signed-off-by: jingle.wu <jingle.wu@elan.corp-partner.google.com>
Change-Id: Ic925df35677cbb37a5f06679c736bd6033c765e4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2383374
Reviewed-by: Raul E Rangel <rrangel@chromium.org>
Commit-Queue: Raul E Rangel <rrangel@chromium.org>

--- a/chromeos/config/x86_64/chromeos-amd-stoneyridge.flavour.config
+++ b/chromeos/config/x86_64/chromeos-amd-stoneyridge.flavour.config
@@ -79,3 +79,4 @@ CONFIG_TMPFS=y
 CONFIG_TOUCHSCREEN_RM_TS=y
 CONFIG_X86_AMD_FREQ_SENSITIVITY=y
 # CONFIG_X86_MCE_INTEL is not set
+CONFIG_SERIO_RAW=y
