--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -44,6 +44,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_FREEZER=y
+CONFIG_CHROME_PLATFORMS=y
 CONFIG_CLS_U32_MARK=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_CONFIGFS_FS=y
@@ -54,6 +55,7 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_CRC7=m
+CONFIG_CROS_EC=y
 CONFIG_CROS_EC_PD_UPDATE=y
 CONFIG_CROS_EC_SENSORHUB=m
 CONFIG_CROS_EC_SPI=y
