--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-pompom-r0.dts
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-pompom-r0.dts
@@ -5,72 +5,40 @@
  * Copyright 2020 Google LLC.
  */
 
-#include "sc7180.dtsi"
+/dts-v1/;
 
-ap_ec_spi: &spi6 {};
-ap_h1_spi: &spi0 {};
-
-#include "sc7180-trogdor.dtsi"
+#include "sc7180-trogdor-pompom.dtsi"
 
 / {
-	panel: panel {
-		compatible = "kingdisplay,kd116n21-30nv-a010";
-		power-supply = <&pp3300_dx_edp>;
-		backlight = <&backlight>;
-		hpd-gpios = <&sn65dsi86_bridge 2 GPIO_ACTIVE_HIGH>;
+	model = "Google Pompom (rev0)";
+	compatible = "google,pompom-rev0", "qcom,sc7180";
+};
 
-		ports {
-			port {
-				panel_in_edp: endpoint {
-					remote-endpoint = <&sn65dsi86_out>;
-				};
-			};
-		};
+&trackpad {
+	interrupts = <58 IRQ_TYPE_EDGE_FALLING>;
+};
+
+/* PINCTRL - modifications to sc7180-trogdor.dtsi */
+
+&trackpad_int_1v8_odl {
+	pinmux {
+		pins = "gpio58";
 	};
-};
 
-&ap_sar_sensor {
-	compatible = "semtech,sx9311";
-	status = "okay";
-};
-
-ap_ts_pen_1v8: &i2c4 {
-	status = "okay";
-	clock-frequency = <400000>;
-
-	ap_ts: touchscreen@10 {
-		compatible = "hid-over-i2c";
-		reg = <0x10>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&ts_int_l>, <&ts_reset_l>;
-
-		interrupt-parent = <&tlmm>;
-		interrupts = <9 IRQ_TYPE_LEVEL_LOW>;
-
-		post-power-on-delay-ms = <20>;
-		hid-descr-addr = <0x0001>;
-
-		vdd-supply = <&pp3300_ts>;
+	pinconf {
+		pins = "gpio58";
 	};
-};
-
-&gpio_keys {
-	status = "okay";
-};
-
-&sdhc_2 {
-	status = "okay";
 };
 
 /* PINCTRL - board-specific pinctrl */
 
 &tlmm {
-	gpio-line-names = "TP_INT_ODL",
-			  "AP_RAM_ID0",
-			  "AP_SKU_ID2",
-			  "AP_RAM_ID1",
+	gpio-line-names = "",
 			  "",
-			  "AP_RAM_ID2",
+			  "",
+			  "",
+			  "",
+			  "",
 			  "AP_TP_I2C_SDA",
 			  "AP_TP_I2C_SCL",
 			  "TS_RESET_L",
@@ -78,23 +46,23 @@ ap_ts_pen_1v8: &i2c4 {
 			  "",
 			  "EDP_BRIJ_IRQ",
 			  "AP_EDP_BKLTEN",
-			  "",
+			  "AP_RAM_ID2",
 			  "",
 			  "EDP_BRIJ_I2C_SDA",
 			  "EDP_BRIJ_I2C_SCL",
 			  "HUB_RST_L",
-			  "",
-			  "",
-			  "",
-			  "",
-			  "",
+			  "DMIC_SEL",
+			  "AP_RAM_ID1",
+			  "AP_SKU_ID2",
+			  "PEN_IRQ_L",
+			  "FPMCU_SEL",
 			  "AMP_EN",
 			  "P_SENSOR_INT_L",
 			  "AP_SAR_SENSOR_SDA",
 			  "AP_SAR_SENSOR_SCL",
 			  "",
 			  "HP_IRQ",
-			  "",
+			  "AP_RAM_ID0",
 			  "EN_PP3300_DX_EDP",
 			  "AP_BRD_ID2",
 			  "BRIJ_SUSPEND",
@@ -123,7 +91,7 @@ ap_ts_pen_1v8: &i2c4 {
 			  "HP_DOUT",
 			  "HP_DIN",
 			  "HP_MCLK",
-			  "AP_SKU_ID0",
+			  "TRACKPAD_INT_1V8_ODL",
 			  "AP_EC_SPI_MISO",
 			  "AP_EC_SPI_MOSI",
 			  "AP_EC_SPI_CLK",
@@ -154,7 +122,7 @@ ap_ts_pen_1v8: &i2c4 {
 			  "",
 			  "EN_PP3300_CODEC",
 			  "EN_PP3300_HUB",
-			  "DMIC_SEL",
+			  "",
 			  "",
 			  "",
 			  "",
@@ -174,7 +142,7 @@ ap_ts_pen_1v8: &i2c4 {
 			  "",
 			  "",
 			  "EDP_BRIJ_EN",
-			  "",
+			  "AP_SKU_ID0",
 			  "",
 			  "",
 			  "",
