--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -58,6 +58,7 @@ CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 CONFIG_IIO_CROS_EC_SENSORS=m
 CONFIG_IIO_CROS_EC_SENSORS_RING=m
 CONFIG_IIO_CROS_EC_SENSORS_SYNC=m
+CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_MAC80211_DEBUGFS=y
