CHROMIUM: config: mediatek: Enable Realtek regulatoy user hints
cat <<EOF | tee -a \
       chromeos/config/arm64/chromiumos-arm64.flavour.config \
       chromeos/config/arm64/chromiumos-mediatek.flavour.config
CONFIG_RTW88_REGD_USER_REG_HINTS=y
EOF

./chromeos/scripts/kernelconfig genconfig

BUG=b:169032081
TEST=iw reg set

Signed-off-by: Claire Chang <tientzu@chromium.org>
Change-Id: I191bddcfaf65c4512d5df957d5d2fa373f9d0c2a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2422067
Commit-Queue: Brian Norris <briannorris@chromium.org>
Reviewed-by: Brian Norris <briannorris@chromium.org>

--- a/chromeos/config/arm64/chromiumos-mediatek.flavour.config
+++ b/chromeos/config/arm64/chromiumos-mediatek.flavour.config
@@ -72,6 +72,7 @@ CONFIG_RTW88_8822BE=y
 CONFIG_RTW88_8822CE=y
 CONFIG_RTW88_DEBUG=y
 CONFIG_RTW88_DEBUGFS=y
+CONFIG_RTW88_REGD_USER_REG_HINTS=y
 CONFIG_SCSI=y
 CONFIG_SENSORS_TMP401=y
 CONFIG_SERIAL_8250=y
